tests/syntax_error/missing_self.jou
class Foo:
    def bar() -> void: # Error: line 2: missing self, should be 'def bar(self, ...)'
        return

def main() -> int:
    f = Foo{}
    f.bar()
    return 0
